--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@madlab/ts-validator",
+  "name": "@cm-madlabs/ts-validator",
   "version": "0.0.1",
   "description": "true/false generic validator",
   "main": "dist/index.js",
@@ -7,6 +7,9 @@
   "author": "waddy",
   "license": "MIT",
   "private": false,
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
     "build": "tsc -p tsconfig.json",
     "test": "jest",
@@ -31,6 +34,16 @@
     "luxon": "^1.25.0"
   },
   "devDependencies": {
-    "@types/luxon": "^1.25.0"
+    "@types/luxon": "^1.25.0",
+    "@typescript-eslint/eslint-plugin": "^4.4.1",
+    "@typescript-eslint/parser": "^4.4.1",
+    "eslint": "^7.11.0",
+    "eslint-config-prettier": "^6.12.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "husky": "^4.3.0",
+    "lint-staged": "^10.4.0",
+    "prettier": "^2.1.2",
+    "typescript": "^4.0.3"
   }
 }
