--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "husky": "^4.3.0",
     "lint-staged": "^10.4.0",
     "prettier": "^2.1.2",
+    "shx": "^0.3.2",
     "typescript": "^4.0.3"
   }
 }
