--- a/package.json
+++ b/package.json
@@ -10,6 +10,14 @@
   "publishConfig": {
     "access": "public"
   },
+  "keywords": [
+    "TypeScript",
+    "Validator"
+  ],
+  "bugs": {
+    "url": "https://github.com/team-mad/ts-validator/issues"
+  },
+  "homepage": "https://github.com/team-mad/ts-validator#typescript-validator",
   "scripts": {
     "build": "tsc -p tsconfig.json",
     "test": "jest",
