--- a/package.json
+++ b/package.json
@@ -50,9 +50,11 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.1.4",
     "husky": "^4.3.0",
+    "jest": "^26.5.3",
     "lint-staged": "^10.4.0",
     "prettier": "^2.1.2",
     "shx": "^0.3.2",
+    "ts-jest": "^26.4.1",
     "typescript": "^4.0.3"
   }
 }
