--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "prettier": "^2.1.2",
     "shx": "^0.3.2",
     "ts-jest": "^26.4.1",
+    "ts-node": "^9.0.0",
     "typescript": "^4.0.3"
   }
 }
