--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
   },
   "homepage": "https://github.com/team-mad/ts-validator#typescript-validator",
   "scripts": {
-    "build": "tsc -p tsconfig.json",
+    "build": "tsc -p tsconfig.json && yarn test:coverage",
     "test": "jest",
+    "test:coverage": "yarn jest --coverage && jest-coverage-badges",
     "lint": "eslint './{lib,src,test}/**/*.{ts,tsx}'",
     "lint-fix": "eslint --fix './{lib,src,test}/**/*.{ts,tsx}'",
     "lint-staged": "lint-staged",
@@ -51,6 +52,7 @@
     "eslint-plugin-prettier": "^3.1.4",
     "husky": "^4.3.0",
     "jest": "^26.5.3",
+    "jest-coverage-badges": "^1.1.2",
     "lint-staged": "^10.4.0",
     "prettier": "^2.1.2",
     "shx": "^0.3.2",
