--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
   },
   "homepage": "https://github.com/team-mad/ts-validator#typescript-validator",
   "scripts": {
-    "build": "tsc -p tsconfig.json && yarn test:coverage",
+    "build": "tsc -p tsconfig.json",
     "test": "jest",
-    "test:coverage": "yarn jest --coverage && jest-coverage-badges",
+    "test:coverage": "yarn jest --coverage",
     "lint": "eslint './{lib,src,test}/**/*.{ts,tsx}'",
     "lint-fix": "eslint --fix './{lib,src,test}/**/*.{ts,tsx}'",
     "lint-staged": "lint-staged",
@@ -46,6 +46,7 @@
     "@types/luxon": "^1.25.0",
     "@typescript-eslint/eslint-plugin": "^4.4.1",
     "@typescript-eslint/parser": "^4.4.1",
+    "codecov": "^3.8.0",
     "eslint": "^7.11.0",
     "eslint-config-prettier": "^6.12.0",
     "eslint-plugin-node": "^11.1.0",
