--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "shx": "^0.3.2",
     "ts-jest": "^26.4.1",
     "ts-node": "^9.0.0",
+    "typedoc": "^0.19.2",
     "typescript": "^4.0.3"
   }
 }
