--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "test": "jest",
     "test:coverage": "yarn jest --coverage",
     "lint": "eslint './{lib,src,test}/**/*.{ts,tsx}'",
-    "lint-fix": "eslint --fix './{lib,src,test}/**/*.{ts,tsx}'",
+    "lint-fix": "eslint --fix './{lib,src,test}/**/*.{ts,tsx}' && prettier --write './{lib,src,test}/**/*.{ts,tsx}'",
     "lint-staged": "lint-staged",
     "clean": "shx rm -rf ./dist && shx rm -rf './{src}/**/*.js' && shx rm -rf './{src}/**/*.d.ts'"
   },
@@ -51,7 +51,6 @@
     "eslint": "^7.11.0",
     "eslint-config-prettier": "^6.12.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^3.1.4",
     "husky": "^4.3.0",
     "jest": "^26.5.3",
     "jest-coverage-badges": "^1.1.2",
